--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,19 @@
             "name": "ExpenseTrackerConnection",
             "database": "ExpenseTracker",
             "username": "root"
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "ExpenseTrackerConnectionn",
+            "database": "ExpenseTracker",
+            "username": "root"
         }
     ]
 }
